try to correct the contrast error on aria hidden on arrow for the slider

--- a/assets/style.css
+++ b/assets/style.css
@@ -77,11 +77,12 @@ body {
 
 .carousel-control-prev-icon {
     background-color: #000 !important;
-    color: #e07c34 !important;
 }
 .carousel-control-next-icon {
     background-color: #000 !important;
-    color: #e07c34 !important;
+}
+.visually-hidden {
+    background-color: #0000ff;
 }
 
 #about-me {
